--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,17 @@ header h1 {
     margin: 0;
 }
 
+#logo-link {
+    position: absolute;
+    top: 1em;
+    left: 1em;
+}
+
+#logo {
+    height: 50px; /* Adjust the size of the logo as needed */
+    width: auto;
+}
+
 #theme-icon {
     position: absolute;
     top: 1em;
